[package]
name = "p1am_rs"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
# RP2350 Specific Dependencies
rp235x-hal = { git = "https://github.com/rp-rs/rp-hal.git", version = "0.2.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
] }

# HAL crates managed by HAL team
embedded-hal = "1.0.0" # Hardware Abstraction Layer, blocking
